// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the custom serializer would serialize the router state 1`] = `
Object {
  "data": Object {
    "foo": "databar",
  },
  "params": Object {
    "foo": "paramsbar",
  },
  "queryParams": Object {
    "foo": "querybar",
  },
  "url": "fooUrl",
}
`;

exports[`Test the custom serializer would serialize the router state with firstChild 1`] = `
Object {
  "data": Object {
    "foo": "databar",
  },
  "params": Object {
    "foo": "otherparam",
  },
  "queryParams": Object {
    "foo": "querybar",
  },
  "url": "fooUrl",
}
`;
